[project]
name = "azl-image-tests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[project.entry-points."pytest11"]
azl_image = "utils.pytest_plugin"

[tool.pytest.ini_options]
addopts = ["-v", "--tb=short", "--import-mode=importlib"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-5s %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
