name:                Only
version:             0.1
x-revision:          2
synopsis:            The 1-tuple type or single-value "collection"
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
bug-reports:         https://github.com/haskell-hvr/Only/issues
category:            Data
build-type:          Simple
cabal-version:       >=1.10
description:
  This package provides a canonical anonymous 1-tuple type missing
  from Haskell for attaching typeclass instances.
  .
  NOTE: There is also the </package/OneTuple OneTuple package> which
  by using a boxed @data@-type provides a 1-tuple type which has
  laziness properties which are more faithful to the ones of Haskell's
  native tuples; whereas the primary purpose of 'Only' is to
  provide the traditionally so named type-wrapper for attaching typeclass
  instances.

Source-Repository head
  Type:              git
  Location:          https://github.com/haskell-hvr/Only.git

library
  hs-source-dirs:    src
  exposed-modules:   Data.Tuple.Only

  default-language:  Haskell2010
  other-extensions:  DeriveGeneric
                   , DeriveDataTypeable
                   , DeriveFunctor
                   , Safe

  build-depends:     base    >= 4.5 && <5
                   , deepseq >= 1.1 && <1.6

  if impl(ghc == 7.4.*)
     build-depends: ghc-prim
